# saas-crm-fastapi

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: ai.py  auth.py  crm.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: migrate.py  seed.py  session.py
app/db/models/: __init__.py  crm.py  user.py
app/services/ai/: client.py
app/workers/: celery_app.py  tasks.py
docker/api/: Dockerfile
migrations/: env.py
migrations/versions/: 0001_init_users.py  0002_crm_tables.py
tests/: test_health.py
web/: .env.example  README.md  index.html  package.json  tailwind.config.ts  vercel.json
web/src/: App.tsx  api.ts  main.tsx  router.tsx  styles.css
web/src/ui/: AppShell.tsx
web/src/views/: DashboardPage.tsx  DemoPage.tsx  LoginPage.tsx
