[project]
name = "saas-crm-fastapi"
version = "0.1.0"
description = "SaaS CRM (Multi-tenant)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "tenacity>=8.2.3",
  "orjson>=3.10.0",
  "structlog>=24.1.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

